@@ -1,5 +1,5 @@
 /***************************************************************************
- CTAPacketBuffer.h  -  A FIFO buffer class for Packets
+ CTAPacketBufferV.h  -  A FIFO buffer class for Packets
  -------------------
     copyright            : (C) 2013 Andrea Zoli
     email                : zoli@iasfbo.inaf.it
@@ -14,32 +14,33 @@
  *                                                                         *
  ***************************************************************************/
 #include "CTAPacket.h"
-#include "CTAPacketBuffer.h"
+#include "CTAPacketBufferV.h"
 
 namespace RTATelem
 {
 
-CTAPacketBuffer::CTAPacketBuffer(string packetConfig, string tmInputFile) : packet(packetConfig, tmInputFile, "")
+CTAPacketBufferV::CTAPacketBufferV(string packetConfig, string tmInputFile) : packet(packetConfig, tmInputFile, "")
+{
+	currentIndex = 0;
+}
+
+CTAPacketBufferV::~CTAPacketBufferV()
 {
 }
 
-CTAPacketBuffer::~CTAPacketBuffer()
-{
-}
-
-void CTAPacketBuffer::load()
+void CTAPacketBufferV::load()
 {
 	byte* packetPtr = packet.readPacket();
 	int counter=0;
 	while(packetPtr != 0)
 	{
-		push(packetPtr);
+		vec.push_back(packetPtr);
 		packetPtr = packet.readPacket();
 		counter++;
 	}
 }
 
-void CTAPacketBuffer::load(int first, int last)
+void CTAPacketBufferV::load(int first, int last)
 {
 	int counter = 0;
 	byte* packetPtr;
@@ -52,14 +53,21 @@ void CTAPacketBuffer::load(int first, int last)
 	}
 	while(counter < first);
 
-	// enqueue elements from first to last
+	// envec elements from first to last
 	do {
 		packetPtr = packet.readPacket();
 		if(packetPtr == 0) break;
-		queue.push(packetPtr);
+		vec.push_back(packetPtr);
 		counter++;
 	}
 	while(counter <= last);
+}
+
+byte* CTAPacketBufferV::get()
+{
+	if(currentIndex >= size())
+		currentIndex = 0;
+	return vec[currentIndex++];
 }
 
 }
